# traffic_quality_checker

./: .gitignore  Procfile  alembic.ini  main.py  pyproject.toml  railway.toml  requirements.txt
alembic/: env.py
alembic/versions/: a1c3e9f72b44_add_comment_and_reports.py  b589e261f68f_create_leads_table.py  c7f2a1d8e345_add_webmaster_status.py
app/: analysis.py  config.py  crud.py  db.py  metrics.py  models.py  parser.py  reporter.py  scheduler.py  scoring.py  tasks.py
app/api/: analysis.py  deps.py  leads.py  main.py  reports.py  upload.py
scripts/: migrate_version_table.py  superset_chart.sql  test_api.py
superset/: 01_webmaster_overview.sql  02_approve_trend.sql  03_daily_leads.sql  04_score_trend.sql  05_issues_heatmap.sql  06_status_distribution.sql  Dockerfile  README.md  railway.toml  start.sh
