[tool.poetry]
name = "traffic-quality-checker"
version = "0.1.0"
description = "Traffic quality checker for affiliate programs"
authors = ["Nalivator3000"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111"
sqlalchemy = {version = "^2.0", extras = ["asyncio"]}
asyncpg = "^0.29"
alembic = "^1.13"
pydantic-settings = "^2.2"
celery = {version = "^5.3", extras = ["redis"]}
redis = "^5.0"
openpyxl = "^3.1"
uvicorn = {version = "^0.29", extras = ["standard"]}
python-multipart = "^0.0.9"
httpx = "^0.27"
pandas = "^2.2"
psycopg2-binary = "^2.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
ruff = "^0.4"

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
